--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
 </head>
 
 <body>
-    <aside class="sidebar_container closed">
+    <aside class="sidebar_container open">
         <div class="sidebar_header">
             <img src="icons/chatgpt_logo.svg" alt="logo" class="header_logo">
             <button class="header_close">
-                <img src="icons/close.svg" alt="close">
+                <img src="icons/close.svg" alt="close" class="header_close_icon">
+                <img src="icons/sidebar.svg" alt="sidebar" class="header_sidebar_icon">
             </button>
         </div>
 
