--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="reset.css" />
         <link rel="stylesheet" href="base.css" />
         <link rel="stylesheet" href="style.css" />
+        <script src="JS/handleConversation.js" defer></script>
         <script src="JS/script.js" defer></script>
     </head>
 
