--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                 </button>
             </div>
 
-            <ul class="sidebar_list">
+            <ul class="sidebar_list" id="sidebar_list">
                 <li class="sidebar_list_item">
                     <img src="icons/new_chat.svg" alt="New Chat" />
-                    <span>New chat</span>
+                    <button id="newChatBtn">New chat</button>
                 </li>
             </ul>
         </aside>
@@ -51,7 +51,7 @@
             </div>
 
             <div class="chat_body" id="chat_body">
-                <p class="body_placeholder" id="chatPlaceholder">Ready when you are.</p>
+                <div class="body_placeholder" id="chatPlaceholder">Ready when you are.</div>
             </div>
 
             <div class="chat_footer">
